--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles.css" />
 
     <title>Budget Tracker</title>
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <div class="wrapper">
