--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,20 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('serviceWorker.js')
+          .then((registration) => {
+            console.log('Service Worker Registered!');
+          })
+          .catch((error) => {
+            console.log('Service Worker Registration Failed!');
+            console.log(error);
+          });
+      }
+    </script>
+    <script src="serviceWorker.js"></script>
     <script src="indexedDb.js"></script>
     <script src="index.js"></script>
   </body>
