--- a/public/index.html
+++ b/public/index.html
@@ -55,20 +55,22 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker
-          .register('serviceWorker.js')
-          .then((registration) => {
-            console.log('Service Worker Registered!');
-          })
-          .catch((error) => {
-            console.log('Service Worker Registration Failed!');
-            console.log(error);
-          });
-      }
-    </script>
     <script src="serviceWorker.js"></script>
+    <script>
+      (async function checkSw() {
+        if ('serviceWorker' in navigator) {
+          try {
+            const reg = await navigator.serviceWorker.register(
+              'serviceWorker.js'
+            );
+            console.log('Service Worker Registered!' + reg);
+          } catch (err) {
+            console.log('Service Worker Registration Failed!');
+            console.log(err);
+          }
+        }
+      })();
+    </script>
     <script src="indexedDb.js"></script>
     <script src="index.js"></script>
   </body>
